# sts2-helper

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/plans/: giggly-wondering-manatee-agent-a40cd09e2207dac0d.md
.github/workflows/: release.yml  test.yml
apps/desktop/: .env.development  .env.example  .env.production  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: game_state_poller.rs  lib.rs  save_dir.rs  save_file.rs  save_watcher.rs  steam.rs
apps/desktop/src-tauri/src/mods/: detect.rs  install.rs  mod.rs
apps/desktop/src-tauri/tests/fixtures/: corrupt.run  current_run_mp.save  sp_abandon.run  sp_death.run  sp_win.run
apps/web/: next.config.ts  package.json  tsconfig.json  vercel.json  vitest.config.ts
docs/: v0-design-context.md
fixtures/: elite.json  monster.json  rest_site.json  shop.json
scripts/: neon-schema-clean.sql  neon-schema.sql  pull-env.sh  setup-worktree.sh  supabase-schema.sql  sync-version.ts  user-migration.json
scripts/__tests__/: sync-version.test.ts
src/app/: layout.tsx  page.tsx
src/components/: hp-bar.tsx  refine-input.tsx  tier-badge.tsx
src/evaluation/: archetype-detector.ts  choice-tracker.ts  context-builder.ts  evaluation-service.ts  run-history-context.ts  types.ts
src/game-data/: sync-codex.ts  use-keywords.ts
src/lib/: constants.ts  get-user-id.ts
supabase/: config.toml
supabase/.temp/: pooler-url
supabase/migrations/: 001_initial_schema.sql  002_nullable_monster_hp.sql  003_add_game_mode.sql  004_add_run_notes.sql  005_add_bosses_fought.sql  006_character_strategies.sql  007_run_analytics_fields.sql  008_auth_and_rls.sql  009_public_read_rls.sql  010_usage_logs.sql  012_update_character_strategies.sql  013_fix_ironclad_strategy.sql  014_analytics_infrastructure.sql  015_analytics_views.sql  (+13 more)
(+306 files in other folders)
