[package]
name = "sts2-replay"
version = "0.1.0"
description = "STS2 Replay — Companion app for Slay the Spire 2"
authors = ["Bolles Media"]
license = "MIT"
repository = "https://github.com/BollesMedia/sts2-helper"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
