[package]
name = "sts2-replay"
version = "0.1.0"
description = "STS2 Replay — Companion app for Slay the Spire 2"
authors = ["Bolles Media"]
license = "MIT"
repository = "https://github.com/BollesMedia/sts2-helper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "time", "rt-multi-thread", "macros"] }
zip = "2.0"
dirs = "6.0"
thiserror = "2"
tempfile = "3"
sysinfo = "0.33"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
